--- a/source/_posts/2023-03-24 WIN NAS.md
+++ b/source/_posts/2023-03-24 WIN NAS.md
@@ -26,7 +26,7 @@ categories:  timeline
 | 硬盘     | 凯侠 RC20             | 0    | ITX 拆机 |
 | 硬盘 1   | 台电 1T               | 0    | ITX 拆机 |
 | 硬盘 2   | 银河 16T              | 990  | tb       |
-| 硬盘3    | 广威长江256G          | 0    | MATX拆机 |
+| 硬盘3    | 光威长江256G          | 0    | MATX拆机 |
 | 电源     | 海韵 650W             | 0    | MATX拆机 |
 | 机箱     | 长城阿基米德 7B       | 261  | pdd      |
 | 机箱风扇 | id-coolding 14cm      | 33   | jd       |
