--- a/source/_posts/2023-03-29-01 Docker 迁移.md
+++ b/source/_posts/2023-03-29-01 Docker 迁移.md
@@ -19,6 +19,8 @@ docker commit container-id image-name
 tar zxvf volumes.tar.gz /var/lib/docker
 
 # 变更权限
+chown -R root /var/lib/docker/volumes
+chmod -R 755 /var/lib/docker/volumes
 
 # 加载镜像
 cat image-name.tar | docker load 
