--- a/source/_posts/2023-03-24 WIN NAS.md
+++ b/source/_posts/2023-03-24 WIN NAS.md
@@ -232,5 +232,4 @@ openai-proxy    docker run -d --restart=always --name openai-proxy -p 5333:5333 
 
 remote-chrome   docker run -d --name firefox -p 8083:8083 -p 8083:5900 oldiy/chrome-novnc:latest
 ```
-
-## VS Code 插件
+[![Docker](https://lsky.sfhj.top/i/main/2023-03/AD016CFDDA8CA216D7088F29F0D4967FD9EF7809FEBC23E712936C6163532B8B.png)](https://lsky.sfhj.top/i/main/2023-03/AD016CFDDA8CA216D7088F29F0D4967FD9EF7809FEBC23E712936C6163532B8B.png)
