--- a/source/_posts/2021-01-03 03、运行命令和获取帮助.md
+++ b/source/_posts/2021-01-03 03、运行命令和获取帮助.md
@@ -12,13 +12,13 @@ categories:
 - 掌握命令的语法
 - 学习使用一些简单命令
 - 学会使用系统内部的一些帮助
-- 学会使用red hat的在线文档
+- 学会使用 red hat 的在线文档
 
 # 命令的语法  
   command options arguments   
 - 项与项之间以空格分隔开
-- options修饰一个命令的行为
-	- 单个字母作为选项前一般都带有-,例如-a,-b,-c或者-abc
+- options 修饰一个命令的行为
+	- 单个字母作为选项前一般都带有-,例如-a,-b,-c 或者-abc
 	- 单词作为选项前通常带有--,例如:--help
 - 参数是一个文件名目录或者具体的某个对象
 - 多个命令用;分隔 
@@ -31,23 +31,23 @@ categories:
 # 获取帮助  
 不要去尝试记住一切，不同级别的帮助资源： whatis、 command --help、 man、pinfo、 /usr/share/doc、 红帽官方产品文档 
 
-**whatis命令**  
+**whatis 命令**  
 - 显示命令的简短描述
 - 基于数据库的查询，定时更新
 - 在安装完后并不能马上使用
 
-**--help命令**  
+**--help 命令**  
 - 列出命令常用的语法和参数
 - 大部分命令支持该选项
 - 特殊符号解读
 	- 在[]中的参数是可选的
 	- 大写的参数或者在<>中都表示变量
-	- 文本后面跟随…表示一个列表
-	- x|y|z表示”x 或者y或者z”
-	* -abc表示”任意-a,-b或者-c的任意组合”
+	- 文本后面跟随……表示一个列表
+	- x|y|z 表示”x 或者 y 或者 z”
+	* -abc 表示”任意-a,-b 或者-c 的任意组合”
 - 例如：date --help
 
-**man使用方法：**  
+**man 使用方法：**  
    man -k 关键字
    man [章节信息] 命令或者配置文件 
 
@@ -56,12 +56,12 @@ categories:
 | 空格键          | 向下翻页                   |
 | PageUp/PageDown | 向上向下翻页               |
 | g/G             | 回到开头/末尾              |
-| /string         | 搜索string关键词           |
+| /string         | 搜索 string 关键词           |
 | n/N             | 在关键词之间向下和向上查找 |
-| q               | 退出man帮助页面            |
+| q               | 退出 man 帮助页面            |
 
 **帮助手册（manual）**  
-位置：/usr/share/man/；man手册标准章节，常用选项：1、用户命令；5、文件格式；8、系统管理命令 
+位置：/usr/share/man/；man 手册标准章节，常用选项：1、用户命令；5、文件格式；8、系统管理命令 
 
 | 章节 | Ecglish               | 中文                 |
 | :---:| --------------------- | ------------------------------ |
@@ -72,34 +72,34 @@ categories:
 | 5    | File formats          | 文件格式                           |
 | 6    | Games                 | 游戏                          |
 | 7    | Conventions           | 约定                          |
-| 8    | Manintenance commands | 系统管理命令（一般只有root能执行的命令） |
-| 9    | Linux Kernel API      | Linux内核 API                |
+| 8    | Manintenance commands | 系统管理命令（一般只有 root 能执行的命令） |
+| 9    | Linux Kernel API      | Linux 内核 API                |
 
-**pinfo帮助文档**   
+**pinfo 帮助文档**   
 - 文档结构由超链接式的 info 节点组成，记录了很多复杂命令和概念说明
 - 在 RHEL 中可以使用 info 和 pinfo 两个命令浏览 info page 
 
 | 命令操作          | 结果                        |
 | ------------------ | --------------------------- |
-| PageUp或者b        | 向上滚动一个屏幕            |
-| PageDown或者空格键 | 向下滚动一个屏幕            |
+| PageUp 或者 b        | 向上滚动一个屏幕            |
+| PageDown 或者空格键 | 向下滚动一个屏幕            |
 | d                  | 显示主题目录                |
 | u                  | 显示主题的父节点            |
 | 向上/向下箭头键    | 向上/向下滚动到下一个超链接 |
-| enter键            | 打开光标处的主题            |
+| enter 键            | 打开光标处的主题            |
 | q                  | 打开光标处的主题            |
 
-**RPM包文档**  
+**RPM 包文档**  
 本地帮助文档
-安装软件包后，在doc目录下释放文档
+安装软件包后，在 doc 目录下释放文档
 /usr/share/doc/pa
 可使用浏览器查看
 
-**redhat在线文档**  
+**redhat 在线文档**  
 红帽官方文档 https://access.redhat.com
 
 # 单元小结  
 - 命令的语法规则
-- man帮助使用
+- man 帮助使用
 - 系统内其他帮助资源
 - 红帽在线文档查阅
