--- a/source/_posts/2023-03-24 WIN NAS.md
+++ b/source/_posts/2023-03-24 WIN NAS.md
@@ -26,8 +26,8 @@ categories:  timeline
 | 硬盘     | 凯侠 RC20             | 0    | ITX 拆机 |
 | 硬盘 1   | 台电 1T               | 0    | ITX 拆机 |
 | 硬盘 2   | 银河 16T              | 990  | tb       |
-| 硬盘3    | 光威长江256G          | 0    | MATX拆机 |
-| 电源     | 海韵 650W             | 0    | MATX拆机 |
+| 硬盘 3    | 光威长江 256G          | 0    | MATX 拆机 |
+| 电源     | 海韵 650W             | 0    | MATX 拆机 |
 | 机箱     | 长城阿基米德 7B       | 261  | pdd      |
 | 机箱风扇 | id-coolding 14cm      | 33   | jd       |
 | 合计     | -                     | 1283 |          |
@@ -38,6 +38,7 @@ categories:  timeline
 硬盘坏的原因无非有三，供电不稳或不足、碰撞震动及 roll 到了  
 机械 18T 单盘峰值可以到 28W，13*30W 算为 390W，CPU 给电 150W，其他给电 50W，650W 在峰值时刚好，日常没这么高  
 然后是噪音，4k 读写 30min，来到了 50 分贝
+![插排接了冰箱和另一台 5900X 主机，实际待机功耗为 30W 左右](https://lsky.sfhj.top/i/main/2023-03/79099B82C10E479193FE89D2722800FB013309797DBA2DA5A154A447FC7F3D2C.jpg)
 
 ## 容量和速度
 > 机械盘的随机读基本忽略吧，几 MB/s 不用测根本不可能跑满接口  
@@ -96,12 +97,12 @@ sata 固态（单价 800） 固态 2*3T=**6T(500MB/s)**
 | ---------- | ---------------------------------------------------- | ---- | --------------- | ----------------- | ---- |
 | 系统盘     | 凯侠 RC20                                            | 1T   | 3GB/s           | 软件默认装系统盘  | √    |
 | 系统盘备份 | 台电                                                 | 1T   | 2GB/s（日常 0） | 系统盘周增量备份  | √    |
-| 裸盘1      | PCIE 3.0 固态                                        | 2T   | 3GB/s           | docker镜像        |
-| 裸盘2      | PCIE 3.0 固态                                        | 2T   | 3GB/s           | docker周增量备份  |
+| 裸盘 1      | PCIE 3.0 固态                                        | 2T   | 3GB/s           | docker 镜像        |
+| 裸盘 2      | PCIE 3.0 固态                                        | 2T   | 3GB/s           | docker 周增量备份  |
 | 分层层储池 | 256G sata+机械                                       | 16T  | 500MB/s~250MB/s | AI                | √    |
-| 裸盘4      | sata 固态                                            | 3T   | 500MB/s         | X                 |
-| 裸盘5      | sata 固态                                            | 3T   | 500MB/s         | X                 |
-| 软硬存储池 | 2T*2 的 3.0 固态 + 16T*4（硬 raid10） 的机械分层储池 | 32T  | 6GB/s~0.5GB/s   | docker volume数据 |
+| 裸盘 4      | sata 固态                                            | 3T   | 500MB/s         | X                 |
+| 裸盘 5      | sata 固态                                            | 3T   | 500MB/s         | X                 |
+| 软硬存储池 | 2T*2 的 3.0 固态 + 16T*4（硬 raid10） 的机械分层储池 | 32T  | 6GB/s~0.5GB/s   | docker volume 数据 |
 | 硬存储池 1 | 16T*4(3+1)=48T 的机械盘硬 raid5                      | 48T  | 750MB/s         | 内网共享文件      |
 | 硬存储池 2 | 16T*4(3+1)=48T 的机械盘硬 raid5                      | 48T  | 750MB/s         |                   |
 
@@ -137,29 +138,29 @@ DevicePasswordLessBuildVersion 改为 0
 
 # 应用
 ## 应用程序
-| 名称                                                                                         | 功能                       | 备注          |
-| -------------------------------------------------------------------------------------------- | -------------------------- | ------------- |
-| [7z](https://www.7-zip.org/)                                                                 | 解压压缩                   |               |
-| [Docker](https://docs.docker.com/get-docker/)                                                |                            | 务必装好 WSL2 |
-| [ToDesk](https://www.todesk.com/download.html)                                               |                            |               |
+| 名称                                                                                         | 功能                                                          | 备注          |
+| -------------------------------------------------------------------------------------------- | ------------------------------------------------------------- | ------------- |
+| [7z](https://www.7-zip.org/)                                                                 | 解压压缩                                                      |               |
+| [Docker](https://docs.docker.com/get-docker/)                                                |                                                               | 务必装好 WSL2 |
+| [ToDesk](https://www.todesk.com/download.html)                                               |                                                               |               |
 | [Git](https://git-scm.com/downloads)                                                         |
 | [ReNamer](http://www.den4b.com/)                                                             |
 | [Chrome](https://www.google.com/chrome/)                                                     |
 | [百度网盘](https://pan.baidu.com/download?from=header#win)                                   |
 | [阿里云盘](https://www.aliyundrive.com/)                                                     |
 | [115 网盘](https://115.com/)                                                                 |
-| Clash                                                                                        |                            |               |  |
+| Clash                                                                                        |                                                               |               |  |
 | [WPS](https://115.com/)                                                                      |
 | [OBS](https://obsproject.com/)                                                               |
 | [语雀](https://www.yuque.com/download)                                                       |
-| [ILSpy](https://github.com/icsharpcode/ILSpy/releases)                                       |                            |               |
-| [VS](https://visualstudio.microsoft.com/)                                                    | .NET、C#、C++ 全家桶       |
-| [VS Code](https://code.visualstudio.com/Download)                                            |                            |               |
-| [Postmam](https://www.postman.com/)                                                          | api、grpc、socket、mq 调试 |               |
-| [MQTT X](https://mqttx.app/)                                                                 |                            |               |
-| [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager/releases) | redis GUI                  |               |
-| [Navicat](https://navicat.com)                                                               |                            |               |
-| [Goland](https://www.jetbrains.com/go/)                                                      |                            |               |
+| [ILSpy](https://github.com/icsharpcode/ILSpy/releases)                                       |                                                               |               |
+| [VS](https://visualstudio.microsoft.com/)                                                    | .NET、C#、C++ 全家桶                                          |
+| [VS Code](https://code.visualstudio.com/Download)                                            |                                                               |               |
+| [Postmam](https://www.postman.com/)                                                          | api、grpc、socket、mq 调试                                    |               |
+| [MQTT X](https://mqttx.app/)                                                                 |                                                               |               |
+| [AnotherRedisDesktopManager](https://github.com/qishibo/AnotherRedisDesktopManager/releases) | redis GUI                                                     |               |
+| [Navicat](https://navicat.com)                                                               |                                                               |               |
+| [Goland](https://www.jetbrains.com/go/)                                                      |                                                               |               |
 | [Bandicam](https://www.bandicam.cn/)                                                         |
 | [WinSCP](https://winscp.net/eng/download.php)                                                |
 | [VOICEMEETER](https://voicemeeter.com/)                                                      |
@@ -176,8 +177,13 @@ DevicePasswordLessBuildVersion 改为 0
 | [Live2D](https://example.com)                                                                |
 | [Adobe](https://weibo.com/u/1112829033)                                                      |
 | [Sinpaste](https://www.snipaste.com/)                                                        |
-
-
+| [SumatraPDF](https://www.sumatrapdfreader.org/free-pdf-reader.html)                          | 开源的体积极小的本地 pdf 阅读器                                 |
+| [spacesniffer](http://www.uderzo.it/main_products/space_sniffer/)                            | 硬盘可视化为区块图的工具                                      |
+| [screentogif](https://www.screentogif.com/)                                                  | gif 制作工具                                                   |
+| [PotPlayer](https://potplayer.daum.net/)                                                     | 本地视频播放器                                                |
+| [ChainLP](http://chainlp.o.oo7.jp/)                                                          | 漫画制作工具，图片转 epub/mobi，kindle 可用，支持 apple book 观看 |
+| [calibre](https://calibre-ebook.com/)                                                        | 管理 epub、mobi、azw3 等格式的电子书工具，配合 kindle 使用极佳    |
+| [Bandicam](https://www.bandicam.cn/)                                                         | 录屏/屏幕录制工具，国区目前 249CNY/一台、376CNY/两台授权码     |
 ## Docker 内网服务
 | 名称                                                         | 功能         | 备注 |
 | ------------------------------------------------------------ | ------------ | ---- |
@@ -194,7 +200,7 @@ DevicePasswordLessBuildVersion 改为 0
 | [Guacamole](https://hub.docker.com/r/guacamole/guacamole)    |
 | [bililive](https://github.com/hr3lxphr6j/bililive-go)        | 录播         |
 | [uptime-kuma](https://github.com/louislam/uptime-kuma)       | 网站监控     |
-```
+```plain
 lsky        docker run -d --restart=always --name lsky -p 40000:80 -v lsky-data:/var/www/html halcyonazure/lsky-pro-docker:latest
 
 memos       docker run -d --restart=always --name memos -p 40001:5230 -v memos-data:/var/opt/memos neosmemo/memos:latest
@@ -233,3 +239,7 @@ openai-proxy    docker run -d --restart=always --name openai-proxy -p 5333:5333 
 remote-chrome   docker run -d --name firefox -p 8083:8083 -p 8083:5900 oldiy/chrome-novnc:latest
 ```
 [![Docker](https://lsky.sfhj.top/i/main/2023-03/AD016CFDDA8CA216D7088F29F0D4967FD9EF7809FEBC23E712936C6163532B8B.png)](https://lsky.sfhj.top/i/main/2023-03/AD016CFDDA8CA216D7088F29F0D4967FD9EF7809FEBC23E712936C6163532B8B.png)
+
+# 缺点
+1. 驱动：win server 虽然稳定，但是很多家用驱动这里没有
+2. docker：wsl 的挂载是真的不好用，还有同一个镜像在 ubuntu 的 docker 跑没问题，在 wsl docker 跑就起不来，原因是 ubuntu 的配置文件会在自动创建 volume 中生成配置，而 wsl 不行
