--- a/source/_posts/2021-01-04 04、了解文件系统的和基本操作.md
+++ b/source/_posts/2021-01-04 04、了解文件系统的和基本操作.md
@@ -13,7 +13,7 @@ categories:
 - 创建文件和文件夹
 - 了解时间戳的概念
 
-# Linux文件系统的组成  
+# Linux 文件系统的组成  
 整个文件系统由 分区--目录 对接  
 文件都是从根开始的，无论文件在哪个分区，都可以通过根访问到  
 
@@ -53,25 +53,25 @@ categories:
 | 文件 | 权限 | 文件:链接数/目录:子目录数 | 拥有人 | 拥有组 | 文件大小（默认字节） | 最后一次修改时间 | 文件名 |
 
 # 基本目录  
-1. **/：根目录**，位于Linux文件系统目录结构的顶层，一般根目录下只存放目录，不要存放文件，/etc、/bin、/dev、/lib、/sbin应该和根目录放置在一个分区中。 
-2. **/bin，/usr/bin：这两个目录为命令文件目录**，也称为二进制目录。包含了供系统管理员及普通用户使用的重要的linux命令和二进制（可执行）文件，包含shell解释器等。在linux 7或者更高的版本中，/bin和/usr/bin，/sbin和/usr/sbin，/lib和/usr/lib、lib64和/usr/lib64中，/中的目录是/usr/中对应目录软链接。相当于win的快捷方式 访问/bin和/usr/bin是一样的
-3. **/boot： 该目录中存放系统的内核文件和引导装载程序文件**，/boot/vmlinuz为linux的内核文件，以及/boot/gurb。一般情况下都是单独分区，分区大小200M即可。
-4. **/dev： 设备（device）文件目录**，存放linux系统下的设备文件，访问该目录下某个文件，相当于访问某个设备，存放连接到计算机上的设备（终端、磁盘驱动器、光驱及网卡等）的对应文件，包括字符设备和块设备等，常用的是挂载光驱： **mount /dev/cdrom  /mnt。** 
-5. **/etc： 系统配置文件存放的目录**，该目录存放系统的大部分配置文件和子目录，不建议在此目录下存放可执行文件，重要的配置文件有/etc/inittab、/etc/fstab、/etc/init.d、/etc/X11（X Window系统有关）、/etc/sysconfig（与网络有关）、/etc/xinetd.d等等，修改配置文件之前记得备份。该目录下的文件由系统管理员来使用，普通用户对大部分文件有只读权限。
-6. **/home： 系统默认的用户宿主目录**，新增用户账号时，用户的宿主目录都存放在此目录下，表示当前用户的宿主目录，test表示用户test的宿主目录。如果做文件服务器，建议单独分区，并设置较大的磁盘空间，方便用户存放数据。用户传上来的数据和其他系统文件隔离，安全性高些！
-7. **/lib，/usr/lib，/usr/local/lib：系统使用的函数库的目录**，程序在执行过程中，需要调用一些额外的参数时需要函数库的协助，该目录下存放了各种编程语言库。典型的linux系统包含了C、C++和FORTRAN语言的库文件。/lib目录下的库映像文件可以用来启动系统并执行一些命令，目录/lib/modules包含了可加载的内核模块，/lib目录存放了所有重要的库文件，其他的库文件则大部分存放在/usr/lib目录下。
-8. **/mnt，/media： mnt目录主要用来临时挂载文件系统，为某些设备提供默认挂载点，如cdrom**。这样当挂载了一个设备如光驱时，就可以通过访问目录/mnt下的文件来访问相应的光驱上的文件了。
-9. **/opt： 给主机额外安装软件所摆放的目录**。如果想要自行安装新的KDE 桌面软件，可以将该软件安装在该目录下。以前的 Linux 系统中，习惯放置在 /usr/local 目录下。
+1. **/：根目录**，位于 Linux 文件系统目录结构的顶层，一般根目录下只存放目录，不要存放文件，/etc、/bin、/dev、/lib、/sbin 应该和根目录放置在一个分区中。 
+2. **/bin，/usr/bin：这两个目录为命令文件目录**，也称为二进制目录。包含了供系统管理员及普通用户使用的重要的 linux 命令和二进制（可执行）文件，包含 shell 解释器等。在 linux 7 或者更高的版本中，/bin 和/usr/bin，/sbin 和/usr/sbin，/lib 和/usr/lib、lib64 和/usr/lib64 中，/中的目录是/usr/中对应目录软链接。相当于 win 的快捷方式 访问/bin 和/usr/bin 是一样的
+3. **/boot： 该目录中存放系统的内核文件和引导装载程序文件**，/boot/vmlinuz 为 linux 的内核文件，以及/boot/gurb。一般情况下都是单独分区，分区大小 200M 即可。
+4. **/dev： 设备（device）文件目录**，存放 linux 系统下的设备文件，访问该目录下某个文件，相当于访问某个设备，存放连接到计算机上的设备（终端、磁盘驱动器、光驱及网卡等）的对应文件，包括字符设备和块设备等，常用的是挂载光驱： **mount /dev/cdrom  /mnt。** 
+5. **/etc： 系统配置文件存放的目录**，该目录存放系统的大部分配置文件和子目录，不建议在此目录下存放可执行文件，重要的配置文件有/etc/inittab、/etc/fstab、/etc/init.d、/etc/X11（X Window 系统有关）、/etc/sysconfig（与网络有关）、/etc/xinetd.d 等等，修改配置文件之前记得备份。该目录下的文件由系统管理员来使用，普通用户对大部分文件有只读权限。
+6. **/home： 系统默认的用户宿主目录**，新增用户账号时，用户的宿主目录都存放在此目录下，表示当前用户的宿主目录，test 表示用户 test 的宿主目录。如果做文件服务器，建议单独分区，并设置较大的磁盘空间，方便用户存放数据。用户传上来的数据和其他系统文件隔离，安全性高些！
+7. **/lib，/usr/lib，/usr/local/lib：系统使用的函数库的目录**，程序在执行过程中，需要调用一些额外的参数时需要函数库的协助，该目录下存放了各种编程语言库。典型的 linux 系统包含了 C、C++和 FORTRAN 语言的库文件。/lib 目录下的库映像文件可以用来启动系统并执行一些命令，目录/lib/modules 包含了可加载的内核模块，/lib 目录存放了所有重要的库文件，其他的库文件则大部分存放在/usr/lib 目录下。
+8. **/mnt，/media： mnt 目录主要用来临时挂载文件系统，为某些设备提供默认挂载点，如 cdrom**。这样当挂载了一个设备如光驱时，就可以通过访问目录/mnt 下的文件来访问相应的光驱上的文件了。
+9. **/opt： 给主机额外安装软件所摆放的目录**。如果想要自行安装新的 KDE 桌面软件，可以将该软件安装在该目录下。以前的 Linux 系统中，习惯放置在 /usr/local 目录下。
 10. **/proc： 此目录的数据都在内存中**，如系统核心，外部设备，网络状态，由于数据都存放于内存中，所以不占用磁盘空间，比较重要的目录有/proc/cpuinfo、/proc/interrupts、/proc/dma、/proc/ioports、/proc/net/\*等。
-11. **/root：系统管理员root的宿主目录**，系统第一个启动的分区为/，所以最好将/root和/放置在一个分区下。
-12. **/sbin，/usr/sbin，/usr/local/sbin：放置系统管理员使用的可执行命令**，如fdisk、shutdown、mount等。与/bin不同的是，这几个目录是给系统管理员root使用的命令，一般用户只能"查看"而不能设置和使用。
+11. **/root：系统管理员 root 的宿主目录**，系统第一个启动的分区为/，所以最好将/root 和/放置在一个分区下。
+12. **/sbin，/usr/sbin，/usr/local/sbin：放置系统管理员使用的可执行命令**，如 fdisk、shutdown、mount 等。与/bin 不同的是，这几个目录是给系统管理员 root 使用的命令，一般用户只能"查看"而不能设置和使用。
 13. **/tmp： 一般用户或正在执行的程序临时存放文件的目录**,任何人都可以访问,重要数据不可放置在此目录下。
-14. **/srv： 服务启动之后需要访问的数据目录**，如www服务需要访问的网页数据存放在/srv/www内。
+14. **/srv： 服务启动之后需要访问的数据目录**，如 www 服务需要访问的网页数据存放在/srv/www 内。
 15. **/usr： 应用程序存放目录**，/usr/bin 存放应用程序， /usr/share 存放共享数据，/usr/lib 存放不能直接运行的，却是许多程序运行所必需的一些函数库文件，/usr/local 存放软件升级包，/usr/share/doc 系统说明文件存放目录。
-16. **/usr/share/man:程序说明文件存放目录**，使用 man ls时会查询/usr/share/man/man1/ls.1.gz的内容，建议单独分区，设置较大的磁盘空间。
+16. **/usr/share/man:程序说明文件存放目录**，使用 man ls 时会查询/usr/share/man/man1/ls.1.gz 的内容，建议单独分区，设置较大的磁盘空间。
 17. **/var： 放置系统执行过程中经常变化的文件，如随时更改的日志文件** /var/log。/var/log/message： 所有的登录文件存放目录。/var/spool/mail： 邮件存放的目录。建议单独分区，设置较大的磁盘空间。
 18. **/run**：目录中存放的是自系统启动以来描述系统信息的文件
-19. **/sys**： 挂载点上挂载sysfs 虚拟文件系统，我们可以通过sysfs 文件系统访问 Linux 内核
+19. **/sys**： 挂载点上挂载 sysfs 虚拟文件系统，我们可以通过 sysfs 文件系统访问 Linux 内核
 
 # 重要目录  
 **/etc：这个目录相当重要**，如前所述，你的开机与系统数据文件均在这个目录之下，因此当这个目录被破坏，那你的系统大概也就差不多该死掉了！而在往后的文件中，你会发现我们常常使用这个目录下的 /etc/rc.d/init.d 这个子目录，因为这个 init.d 子目录是开启一些 Linux 系统服务的 scripts 的地方。而在 /etc/rc.d/rc.local 这个文件是开机的执行档。  
@@ -84,31 +84,31 @@ categories:
 # 一些常用文件目录  
 **用户账号文件：/etc/passwd**
 
-|字段1|字段2|字段3|字段4|字段5|字段6|字段7|
+|字段 1|字段 2|字段 3|字段 4|字段 5|字段 6|字段 7|
 |---|---|---|---|---|---|---|
 |user01|x:|1000:|1000:|User One:|/home/user01|/bin/bash|
-|用户名称|密码占位符“x”(表示登录该用户时需要密码，红帽8去掉也需要密码）|用户帐号的UID号| 用户的私有组|用户描述信息|用户的主目录|登录Shell信息|
+|用户名称|密码占位符“x”(表示登录该用户时需要密码，红帽 8 去掉也需要密码）|用户帐号的 UID 号| 用户的私有组|用户描述信息|用户的主目录|登录 Shell 信息|
 
 **密码文件：/etc/shadow**
 
-| 字段1 | 字段2 | 字段3 | 字段4 | 字段5 | 字段6 | 字段7 | 字段8 | 字段9 |
+| 字段 1 | 字段 2 | 字段 3 | 字段 4 | 字段 5 | 字段 6 | 字段 7 | 字段 8 | 字段 9 |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- |
 |user03|\$6\$CSsx...output omitted...:|17933|0|99999:|7|2|18113||
-|用户帐号的名称|加密的密码字串信息|最近一次修改密码的时间，表示从1970.01.01至今的天数|密码的最短使用天数，默认值为0，没有要求|密码的最长有效天数，默认值为99999|密码即将到期警告天数，默认值为7|在密码过期之后账号保持活动的天数，指定天数后账号被锁定，成为无效|帐号失效时间，默认值为空，以1970.01.01的天数表示|保留字段（未使用）|
+|用户帐号的名称|加密的密码字串信息|最近一次修改密码的时间，表示从 1970.01.01 至今的天数|密码的最短使用天数，默认值为 0，没有要求|密码的最长有效天数，默认值为 99999|密码即将到期警告天数，默认值为 7|在密码过期之后账号保持活动的天数，指定天数后账号被锁定，成为无效|帐号失效时间，默认值为空，以 1970.01.01 的天数表示|保留字段（未使用）|
 
 **组信息文件：/etc/group**
 
-| 字段1 | 字段2 | 字段3 | 字段4 |
+| 字段 1 | 字段 2 | 字段 3 | 字段 4 |
 | ----- | ----- |
-|组的名称|密码占位符“x”|组的ID号|该组是user1，user2和user3的附加组|
+|组的名称|密码占位符“x”|组的 ID 号|该组是 user1，user2 和 user3 的附加组|
 
 #文件和目录名  
-**名字不能多于255个字符**
+**名字不能多于 255 个字符**
 **所有字符都要求是有效的，除斜线(/)之外**
 不要使用某些特殊的字符在文件或者目录名中
 当文件名中有特殊字符时应用引号保护引起来
 **命名和大小写敏感**
-例如:MAIL,Mail,mail和mAiL
+例如:MAIL,Mail,mail 和 mAiL
 
 # 绝对路径和相对路径  
 **绝对路径：**  
@@ -150,7 +150,7 @@ cd ..
 改变目录到上一个工作目录  
 cd -  
 改变到当前用户的主目录  
-cd 或者cd ~  
+cd 或者 cd ~  
 改变到某个用户的主目录  
 cd  ~username
 
@@ -179,11 +179,11 @@ cd  ~username
 加参数：-n 或 --number：由 1 开始对所有输出的行数编号。
 
 **more**：命令类似 cat ，不过会以一页一页的形式显示，更方便使用者逐页阅读，而最基本的指令就是按空白键（space）就往下一页显示，按 b 键就会往回（back）一页显示  
-l Enter 向下n行，需要定义。默认为1行  
+l Enter 向下 n 行，需要定义。默认为 1 行  
 l 空格键 向下滚动一屏  
-l q 退出more
+l q 退出 more
 
-**less**：工具也是对文件或其它输出进行分页显示的工具，应该说是linux正统查看文件内容的工具，功能极其强大。  
+**less**：工具也是对文件或其它输出进行分页显示的工具，应该说是 linux 正统查看文件内容的工具，功能极其强大。  
 1. 命令格式
 less [-选项] 文件 
 2. 命令功能
@@ -192,29 +192,29 @@ less 与 more 类似，但使用 less 可以随意浏览文件，而 more 仅能
 ?字符串：向上搜索“字符串”的功能  
 n：重复前一个搜索（与 / 或 ? 有关），next  
 N：反向重复前一个搜索（与 / 或 ? 有关）  
-Q 退出less 命令  
-Enter 向下n行，需要定义。默认为1行  
+Q 退出 less 命令  
+Enter 向下 n 行，需要定义。默认为 1 行  
 空格键 向下滚动一屏  
-b键 向上滚动一屏  
+b 键 向上滚动一屏  
 [pagedown]： 向下翻动一行  
 [pageup]：  向上翻动一行  
 
 
 **head**：用来显示档案的开头至标准输出中。如果指定了多于一个文件，在每一段输出前会给出文件名作为文件头。  
-head -n 5 log.txt ；说明：显示文件的前n行
+head -n 5 log.txt ；说明：显示文件的前 n 行
 
 **tail**：命令用途是依照要求将指定的文件的最后部分输出  
 1. tail filename
-说明：显示filename最后10行。
+说明：显示 filename 最后 10 行。
 2. tail -F filename
-说明：动态监视filename文件的尾部内容（默认10行，相当于增加参数 -n 10），刷新显示在屏幕上。退出，按下CTRL+C。
+说明：动态监视 filename 文件的尾部内容（默认 10 行，相当于增加参数 -n 10），刷新显示在屏幕上。退出，按下 CTRL+C。
 3. tail -n 20 filename
-说明：显示filename最后20行。
+说明：显示 filename 最后 20 行。
 
-**file查看文件类型**：查看文件类型  
+**file 查看文件类型**：查看文件类型  
 文件可以包含许多类型的数据  
 在文件打开之前先检查文件类型，然后再确定使用适当的命令或者应用程序  
-file [options] <filename>…
+file [options] <filename>……
 
 **tree**：可以查看当前目录下的所有子目录和文件结构
 
