--- a/source/_posts/2023-03-24 WIN NAS.md
+++ b/source/_posts/2023-03-24 WIN NAS.md
@@ -13,7 +13,7 @@ categories:  timeline
 > 选来选去，看着 b 站知乎一堆推荐如上 NAS 的，自己装了好几个用了下，不太行，最后看见有人推荐 WIN NAS，我也问了下玩 NAS 的朋友，也用的 WIN 做 NAS，遂开装。
 
 > 系统直接选 WIN Server 2022，驱动装好可以连 WIFI，机器直接丢阳台或者隔墙，WIFI6 日常用速度肯定够的，虚拟机有 hyper-v，存储有自带的存储池，可以做 refs（单盘 raid5）或者固态加速机械，组多盘 raid 都没问题，有图形化，这配置单 U 功耗顶天 **100W**，闲时还能接屏幕玩下 101 和雀魂都是没问题的，唯一的缺点就是 docker 用起来麻烦点。
-
+![9C7540E74C7CCD48C3CDA190CEFE877D791A261C644B09F0C1C190A64E70EE24.PNG](https://lsky.sfhj.top/i/main/2023-03/9C7540E74C7CCD48C3CDA190CEFE877D791A261C644B09F0C1C190A64E70EE24.png)
 # 硬件
 ## 配置
 | 类型     | 名称                  | 价格 | 来源     |
