--- a/source/_posts/2023-03-24 WIN NAS.md
+++ b/source/_posts/2023-03-24 WIN NAS.md
@@ -4,6 +4,7 @@ date: 2023-03-24 00:00:00 # 时间
 tags: # 标签
 - NAS
 urlname: windows-server-2022-nas-init
+keywords: NAS Docker Hyper-V Refs RAID BT/PT Win NAS NAS应用场景 NAS选择指南
 categories:  timeline
 ---
 > 本想用 freenas 或者是黑群晖这些基于 linux 的来搭建，但是大部分 nas 系统没有虚拟机，黑裙有但不稳定，白裙那配置和价格，算了算了。  
