--- a/source/_posts/2021-01-01 01、Linux的简介和安装.md
+++ b/source/_posts/2021-01-01 01、Linux的简介和安装.md
@@ -28,7 +28,7 @@ CentOS 所有历史版本的下载地址：http://archive.kernel.org/centos-vaul
 # 什么是操作系统？  
 操作系统，英文名称 Operating System，简称 OS，是计算机系统中必不可少的基础系统软件，它是应用程序运行以及用户操作必备的基础环境支撑，是计算机系统的核心。  
 
-![操作系统与计算机硬件软件关系](https://lsky.sfhj.top/i/main/2023-03/96F0C320ADD182842FBA7D0D28146A5183660388D3149919CAB5C0163FAC9C5A.png)
+![操作系统与计算机硬件软件关系](https://lsky.vtbai.com/i/main/2023-03/96F0C320ADD182842FBA7D0D28146A5183660388D3149919CAB5C0163FAC9C5A.png)
 
 # 什么是 Linux？  
 和 Windows 操作系统软件一样，Linux 也是一个操作系统软件。  
