--- a/source/_posts/2021-01-06 图床搭建.md
+++ b/source/_posts/2021-01-06 图床搭建.md
@@ -13,7 +13,7 @@ categories: timeline
 <!-- more -->  
 
 # namesilo 配置(国内备案域名可跳过此步骤)
-![选择域名](https://lsky.sfhj.top/i/main/2023-03/281BCA8978E663D1AA05423137C07932E35E89FDDDCA7A23445455A7723F219C.png)
+![选择域名](https://lsky.vtbai.com/i/main/2023-03/281BCA8978E663D1AA05423137C07932E35E89FDDDCA7A23445455A7723F219C.png)
 
 进入域名管理页面  
 将原有三个 dns 删除替换为以下内容，提交
@@ -25,18 +25,18 @@ categories: timeline
 # dnspod 配置
 进入 dnspod 管理页面，添加你的域名，点击 dns 刷新  
 创建公有读私有写存储桶，并复制存储桶域名  
-![添加自定义源站域名](https://lsky.sfhj.top/i/main/2023-03/5C3AE90E330110085424836989AC2F904D961280A441B32B909654094DCFE2B2.png)
+![添加自定义源站域名](https://lsky.vtbai.com/i/main/2023-03/5C3AE90E330110085424836989AC2F904D961280A441B32B909654094DCFE2B2.png)
 到 dnspod 解析页面，添加 CNAME 解析  
 需要注意的是，namesilo 的 dns 可能需要等几十分钟才会刷新，在此之前访问域名可能是到达不了存储桶的  
-![DNS添加CNAME](https://lsky.sfhj.top/i/main/2023-03/E315A71C14F3F94218BC781296F5F37A1B1996BCEF1D797ECA20A64597AFD18F.png)
+![DNS添加CNAME](https://lsky.vtbai.com/i/main/2023-03/E315A71C14F3F94218BC781296F5F37A1B1996BCEF1D797ECA20A64597AFD18F.png)
 
 # ssl 证书以及防盗链设置
 在 dnspod 或者腾讯云域名注册界面申请免费 ssl 证书并下载，解压。在存储桶域名绑定页面进行证书绑定，用记事本打开 Nginx 里的文本并复制到对应区域
-![上传ssl证书](https://lsky.sfhj.top/i/main/2023-03/6B12C37D45ECE58C98F26DA67CDFC60F73ADB472ECBD37D20EFC839F64BD4A39.png)
+![上传ssl证书](https://lsky.vtbai.com/i/main/2023-03/6B12C37D45ECE58C98F26DA67CDFC60F73ADB472ECBD37D20EFC839F64BD4A39.png)
 
 测试一下，不挂 t 的情况下自定义域名可以访问图片，以后的迁移只需 copy 文件，域名重新对应一下 CNAME 即可，markdown 文章的图片地址不需要变动。
-![自定义域名访问图片 && 对象存储默认源站访问图片](https://lsky.sfhj.top/i/main/2023-03/4DEED59F8DC599B65736DFA4B81C4DB1C4028557408CFBA90B1691DDDE70D6EB.png)
+![自定义域名访问图片 && 对象存储默认源站访问图片](https://lsky.vtbai.com/i/main/2023-03/4DEED59F8DC599B65736DFA4B81C4DB1C4028557408CFBA90B1691DDDE70D6EB.png)
 
 存储桶防盗链设置如下，配置完防盗链之后本地预览和网页地址栏输入是访问不了对象存储的，只有白名单内的 ip 才能访问  
-![设置存储桶放到白名单](https://lsky.sfhj.top/i/main/2023-03/358EF065F5956500257330DDE1493957881F0BD1C0294CB5E6115CDF7805CE40.png)
+![设置存储桶放到白名单](https://lsky.vtbai.com/i/main/2023-03/358EF065F5956500257330DDE1493957881F0BD1C0294CB5E6115CDF7805CE40.png)
 
