--- a/source/_posts/2022-09-04 301跳转.md
+++ b/source/_posts/2022-09-04 301跳转.md
@@ -20,30 +20,30 @@ dnspod 官网：https://www.dnspod.cn/
 <!-- more -->  
 # 添加 NS 解析
 ## cloudflare 中添加域名
-![添加域名](https://lsky.sfhj.top/i/main/2023-03/5F340345564EACF17BCA4B89B1E262779A2D32CABDE4F6E494D45E40FD42A7D2.png)
+![添加域名](https://lsky.vtbai.com/i/main/2023-03/5F340345564EACF17BCA4B89B1E262779A2D32CABDE4F6E494D45E40FD42A7D2.png)
 
-![选择免费](https://lsky.sfhj.top/i/main/2023-03/3528E49703BABDB9EE3B5E63E5A63EAE32C75D99FE32A1E2F7249A62FD1B7DE3.png)
+![选择免费](https://lsky.vtbai.com/i/main/2023-03/3528E49703BABDB9EE3B5E63E5A63EAE32C75D99FE32A1E2F7249A62FD1B7DE3.png)
 
-![](https://lsky.sfhj.top/i/main/2023-03/4C146869F59CF5BF6400C5CE2CB63F98186F4DF75CFE5F86F720457FA97E01E9.png)
+![](https://lsky.vtbai.com/i/main/2023-03/4C146869F59CF5BF6400C5CE2CB63F98186F4DF75CFE5F86F720457FA97E01E9.png)
 
-![复制两个NS值](https://lsky.sfhj.top/i/main/2023-03/829C11EA78DD0E39B8D94FA4DCAA06CC104F451282F6CC014D92CE7431C6A94C.png)
+![复制两个NS值](https://lsky.vtbai.com/i/main/2023-03/829C11EA78DD0E39B8D94FA4DCAA06CC104F451282F6CC014D92CE7431C6A94C.png)
 
 ## dnspod 修改 ns 服务器
 > https://console.cloud.tencent.com/domain/all-domain
 
-![NS记录填写到这里](https://lsky.sfhj.top/i/main/2023-03/63CDA084EA205938EFDD34965DA0B14777989D16F72A4BF9FCBAD5CABCE6F827.png)
+![NS记录填写到这里](https://lsky.vtbai.com/i/main/2023-03/63CDA084EA205938EFDD34965DA0B14777989D16F72A4BF9FCBAD5CABCE6F827.png)
 
 ## namesilo 修改 ns 服务器
 > https://www.namesilo.com/account_domains.php
 
-![选择域名](https://lsky.sfhj.top/i/main/2023-03/B5DDEDA418F36157C835DA235BA775A9AC354B93EE763D05C05F83CADC9A77D5.png)
+![选择域名](https://lsky.vtbai.com/i/main/2023-03/B5DDEDA418F36157C835DA235BA775A9AC354B93EE763D05C05F83CADC9A77D5.png)
 
 
-![修改NameServer](https://lsky.sfhj.top/i/main/2023-03/9FDF844D910F637DEB6C82647EC4E10E232B109A22E974EBEC582E07597BB683.png)
+![修改NameServer](https://lsky.vtbai.com/i/main/2023-03/9FDF844D910F637DEB6C82647EC4E10E232B109A22E974EBEC582E07597BB683.png)
 
 # 添加 DNS 解析和 Workers
 
-![编辑Workers](https://lsky.sfhj.top/i/main/2023-03/36C2EE20809A34E19037B12D9B2971DB4EF122F94257EDDE75CB0B5D11D98360.png)
+![编辑Workers](https://lsky.vtbai.com/i/main/2023-03/36C2EE20809A34E19037B12D9B2971DB4EF122F94257EDDE75CB0B5D11D98360.png)
 
 
 ```JavaScript
