--- a/source/_posts/2023-03-24 WIN NAS.md
+++ b/source/_posts/2023-03-24 WIN NAS.md
@@ -16,7 +16,7 @@ categories:  timeline
 > 系统直接选 WIN Server 2022，驱动装好可以连 WIFI，机器直接丢阳台或者隔墙，WIFI6 日常用速度肯定够的，虚拟机有 hyper-v，存储有自带的存储池，可以做 refs（单盘 raid5）或者固态加速机械，组多盘 raid 都没问题，有图形化，这配置单 U 功耗顶天 **100W**，闲时还能接屏幕玩下 101 和雀魂都是没问题的，唯一的缺点就是 docker 用起来麻烦点。
 
 
-![9C7540E74C7CCD48C3CDA190CEFE877D791A261C644B09F0C1C190A64E70EE24.PNG](https://lsky.sfhj.top/i/main/2023-03/9C7540E74C7CCD48C3CDA190CEFE877D791A261C644B09F0C1C190A64E70EE24.png)
+![9C7540E74C7CCD48C3CDA190CEFE877D791A261C644B09F0C1C190A64E70EE24.PNG](https://lsky.vtbai.com/i/main/2023-03/9C7540E74C7CCD48C3CDA190CEFE877D791A261C644B09F0C1C190A64E70EE24.png)
 # 硬件
 ## 配置
 | 类型     | 名称                  | 价格 | 来源     |
@@ -41,7 +41,7 @@ categories:  timeline
 硬盘坏的原因无非有三，供电不稳或不足、碰撞震动及 roll 到了  
 机械 18T 单盘峰值可以到 28W，13*30W 算为 390W，CPU 给电 150W，其他给电 50W，650W 在峰值时刚好，日常没这么高  
 然后是噪音，4k 读写 30min，来到了 50 分贝
-![插排接了冰箱和另一台 5900X 主机，实际待机功耗为 30W 左右](https://lsky.sfhj.top/i/main/2023-03/79099B82C10E479193FE89D2722800FB013309797DBA2DA5A154A447FC7F3D2C.jpg)
+![插排接了冰箱和另一台 5900X 主机，实际待机功耗为 30W 左右](https://lsky.vtbai.com/i/main/2023-03/79099B82C10E479193FE89D2722800FB013309797DBA2DA5A154A447FC7F3D2C.jpg)
 
 ## 容量和速度
 > 机械盘的随机读基本忽略吧，几 MB/s 不用测根本不可能跑满接口  
@@ -241,7 +241,7 @@ openai-proxy    docker run -d --restart=always --name openai-proxy -p 5333:5333 
 
 remote-chrome   docker run -d --name firefox -p 8083:8083 -p 8083:5900 oldiy/chrome-novnc:latest
 ```
-[![Docker](https://lsky.sfhj.top/i/main/2023-03/AD016CFDDA8CA216D7088F29F0D4967FD9EF7809FEBC23E712936C6163532B8B.png)](https://lsky.sfhj.top/i/main/2023-03/AD016CFDDA8CA216D7088F29F0D4967FD9EF7809FEBC23E712936C6163532B8B.png)
+[![Docker](https://lsky.vtbai.com/i/main/2023-03/AD016CFDDA8CA216D7088F29F0D4967FD9EF7809FEBC23E712936C6163532B8B.png)](https://lsky.vtbai.com/i/main/2023-03/AD016CFDDA8CA216D7088F29F0D4967FD9EF7809FEBC23E712936C6163532B8B.png)
 
 # 缺点
 1. 驱动：win server 虽然稳定，但是很多家用驱动这里没有
