--- a/source/_posts/2023-04-09 Docker 应用清单.md
+++ b/source/_posts/2023-04-09 Docker 应用清单.md
@@ -8,14 +8,27 @@ tags:
 categories: kubernetes/docker/podman
 ---
 
-# [兰空图床](https://github.com/lsky-org/lsky-pro)
-# [memos便签](https://github.com/usememos/memos)
+# [lsky](https://github.com/lsky-org/lsky-pro)
+> 兰空图床 
 
-# share分享	
-# alltube		
-# bililive	
+https://lsky.vtbai.com/
+# [memos](https://github.com/usememos/memos)
+> 便签
+
+https://memos.vtbai.com/
+
+<!--more-->
+# [pingvin-share](https://github.com/stonith404/pingvin-share)
+
+# [alltube](https://github.com/Rudloff/alltube)
+
+# [bililive](https://github.com/hr3lxphr6j/bililive-go)
+> 录播
+
+https://bililive.vtbai.com/
+
 # qinglong 	
-# kuma监控网站
+# kuma
 # redis		
 # mongo		
 # postgres	
@@ -24,7 +37,7 @@ categories: kubernetes/docker/podman
 # mariadb		
 # nextcloud	
 # nas-tools	
-# (vocechat)[]
+# (vocechat)[https://github.com/Privoce/vocechat-web]
 # flare		
 # alist		
 # wikijs		
@@ -45,6 +58,6 @@ categories: kubernetes/docker/podman
 # koodo		
 # minio 		
 # bitwarden	
-# qiandao		
+# [qiandao](https://github.com/binux/qiandao)
 
 
