--- a/source/_posts/2023-04-09 Docker 应用清单.md
+++ b/source/_posts/2023-04-09 Docker 应用清单.md
@@ -9,35 +9,53 @@ categories: kubernetes/docker/podman
 ---
 
 # [lsky](https://github.com/lsky-org/lsky-pro)
-> 兰空图床 
+> 兰空图床
 
-https://lsky.vtbai.com/
+> https://lsky.vtbai.com/
+
 # [memos](https://github.com/usememos/memos)
 > 便签
 
-https://memos.vtbai.com/
+> https://memos.vtbai.com/
 
 <!--more-->
 # [pingvin-share](https://github.com/stonith404/pingvin-share)
+> 文件分享，类似于蓝奏
 
 # [alltube](https://github.com/Rudloff/alltube)
+> 下载油管、b站视频
 
 # [bililive](https://github.com/hr3lxphr6j/bililive-go)
 > 录播
 
-https://bililive.vtbai.com/
+> https://bililive.vtbai.com/
 
-# qinglong 	
+# [qinglong](https://github.com/whyour/qinglong)
+
+
 # kuma
-# redis		
-# mongo		
+
+
+# redis
+
+
+# mongo
+
 # postgres	
+
 # guacamole	
+
 # talebook	
+
 # mariadb		
+
 # nextcloud	
+
 # nas-tools	
-# (vocechat)[https://github.com/Privoce/vocechat-web]
+
+# [vocechat](https://github.com/Privoce/vocechat-web)
+> 实时通信，类似于discord，但服务端不开源，大于20人需收费，非开源慎用
+
 # flare		
 # alist		
 # wikijs		
@@ -50,14 +68,24 @@ https://bililive.vtbai.com/
 # reader3		
 # answer		
 # [misskey](https://github.com/misskey-dev/misskey)
+> 去中心化的微博，开源、安全、好用
+
+> https://m.vtbai.com/
+
 # kamifaka	
 # poste		
 # komga 		
 # composerize	
 # unlockmusic	
 # koodo		
-# minio 		
-# bitwarden	
+# minio
+> 对象存储
+
+
+# [bitwarden](https://github.com/dani-garcia/vaultwarden)
+> 密码管理
+
+
 # [qiandao](https://github.com/binux/qiandao)
 
 
