--- a/source/_posts/2023-03-28 WSL2 迁移 Docker.md
+++ b/source/_posts/2023-03-28 WSL2 迁移 Docker.md
@@ -9,17 +9,23 @@ tags:
 categories: kubernetes/docker/podman
 ---
 > 迁移前关闭 Docker Desktop
-```dos
+```bash
+# 关闭 wsl 
 wsl --shutdown
 
+# vhd 文件压缩为 tar 并保存在 d 盘
 wsl --export docker-desktop D:Docker-desktop.tar
-wsl --export docker-desktop-data Ddocker-desktop-data.tar
+wsl --export docker-desktop-data D:Ddocker-desktop-data.tar
 
+# 卸载原有的 docker 本体，和 docker data 即 volume
 wsl --unregister docker-desktop
 wsl --unregister docker-desktop-data
 
-wsl --import docker-desktop D:\wsl D:docker-desktop.tar --version 2
-wsl --import docker-desktop-data D:\wsl D:docker-desktop-data.tar --version 2
+# 将文件迁移到 E 盘后，导入到docker
+wsl --import docker-desktop E:\wsl D:docker-desktop.tar --version 2
+wsl --import docker-desktop-data E:\wsl D:docker-desktop-data.tar --version 2
 
+# 查看结果
 wsl
+wsl -l -v
 ```
