--- a/source/_posts/2023-03-28 WSL2 迁移 Docker.md
+++ b/source/_posts/2023-03-28 WSL2 迁移 Docker.md
@@ -21,11 +21,15 @@ wsl --export docker-desktop-data D:Ddocker-desktop-data.tar
 wsl --unregister docker-desktop
 wsl --unregister docker-desktop-data
 
-# 将文件迁移到 E 盘后，导入到docker
+# 使用 D 盘的 tar 文件，将文件导入到 docker，并指定导入（解压）后的 vhd 数据保存在 E 盘
 wsl --import docker-desktop E:\wsl D:docker-desktop.tar --version 2
 wsl --import docker-desktop-data E:\wsl D:docker-desktop-data.tar --version 2
 
-# 查看结果
+# 启动 wsl 和 docker
 wsl
+# 查看结果
 wsl -l -v
 ```
+
+![0CCDC5C47BA6723B10B45DE9DBEE49591C9A4D59D57B628D27B1784C3992B078.png](https://lsky.vtbai.com/i/main/2023-05/0CCDC5C47BA6723B10B45DE9DBEE49591C9A4D59D57B628D27B1784C3992B078.png)
+![02C761A030AB6EC8DDEED412F6F415EAEDE67F66B2A351C5410E5F91F0336318.png](https://lsky.vtbai.com/i/main/2023-05/02C761A030AB6EC8DDEED412F6F415EAEDE67F66B2A351C5410E5F91F0336318.png)
