--- a/source/_posts/2020-12-21 Hexo Next7食用方法.md
+++ b/source/_posts/2020-12-21 Hexo Next7食用方法.md
@@ -4,6 +4,7 @@ date: 2020-12-21 00:00:00 # 时间
 tags: # 标签
 - Hexo
 urlname: use-hexo-next-7
+keywords: hexo rss
 categories:  timeline
 ---
 # 博客启用（前略环境搭建）
