--- a/source/_posts/2023-06-15 设置 Podman 开机自动动容器.md
+++ b/source/_posts/2023-06-15 设置 Podman 开机自动动容器.md
@@ -5,6 +5,8 @@ date: 2023-06-15 00:00:00
 urlname: linux-reboot-auto-launch-podman
 tags: 
  - Containerd
+ - Docker
+ - Podman
 categories: kubernetes/docker/podman
 ---
 > 系统为 Rocky Linux，podman 已设置别名为 docker
@@ -13,4 +15,9 @@ categories: kubernetes/docker/podman
 crontab -e
 # 设置开机自启
 @reboot docker ps -a |awk '{print $1}'|grep -v 'CONTAINER'|while read line;do docker start "$line";done
+
+# 备份podman
+tar -zcvf /mnt/bk-root/dk-volume.tar.gz /var/lib/containers/storage/volumes
+# 恢复podman
+tar -zxvf /mnt/bk-root/dk-volume.tar.gz -C /var/lib/containers/storage
 ```
