--- a/source/_posts/2023-06-19 关于家用服务器配置的思考.md
+++ b/source/_posts/2023-06-19 关于家用服务器配置的思考.md
@@ -28,6 +28,8 @@ categories:  timeline
 * **Appstore**：P7000Z
 * **电源**：海韵 650W 
 * **机箱**：长城阿基米德 7b（13 个 3.5 存机械，8 个 2.5 寸 sata 位）
+
+<!--more-->
 ## Docker 服务器（Rocky Linux 9.2）
 > 只是容器机器罢了
 * **cpu**：13400 10c16t
