--- a/source/_posts/2023-06-19 关于家用服务器配置的思考.md
+++ b/source/_posts/2023-06-19 关于家用服务器配置的思考.md
@@ -43,10 +43,22 @@ categories:  timeline
 
 # 软件配置
 ## NFS 服务器
-### [NFS 配置](https://zhuanlan.zhihu.com/p/75099437)
+### [NFS Server](https://zhuanlan.zhihu.com/p/75099437)
+> win server自带有nfs，配置简单，当然需要先raid5/6出去使用
+### [QBittorrent](https://www.qbittorrent.org/download)
+> bt下载工具，连不上节点先去下一个ubuntu的种子打通
+> https://cn.ubuntu.com/download/alternative-download
+### [百度网盘](https://pan.baidu.com/)
+### [阿里云盘](https://www.aliyundrive.com/)
+### [115网盘](https://115.com/)
+> Appstore冷备份
+### [坚果云](https://www.jianguoyun.com/)
+### [微力同步](http://www.verysync.com/)
+### [夜神模拟器](https://www.yeshen.com/)
 
 ## Docker 服务器
 ### [1Panel 面板](https://1panel.cn/docs/installation/online_installation/)
+> 1panel是开源的，使用的是GPL协议
 ### 初始化脚本
 
 ```bash
