--- a/source/_posts/2020-12-21 Hexo Next7食用方法.md
+++ b/source/_posts/2020-12-21 Hexo Next7食用方法.md
@@ -6,6 +6,7 @@ tags: # 标签
 urlname: use-hexo-next-7
 keywords: hexo rss
 categories:  timeline
+copyright: true
 ---
 # 博客启用（前略环境搭建）
 新建文件夹，之后在其中执行：hexo init。
