--- a/source/_posts/2023-03-29-03 Ubuntu 2204 安装 Docker.md
+++ b/source/_posts/2023-03-29-03 Ubuntu 2204 安装 Docker.md
@@ -6,6 +6,7 @@ urlname: ubuntu-2204-install-docker-and-link-portainer
 tags: 
  - Docker
 categories: kubernetes/docker/podman
+copyright: true
 ---
 > https://docs.docker.com/engine/install/ubuntu/
 
