--- a/source/_posts/2023-06-19 关于家用服务器配置的思考.md
+++ b/source/_posts/2023-06-19 关于家用服务器配置的思考.md
@@ -10,6 +10,7 @@ tags:
  - NFS
 keywords: 服务器
 categories:  timeline
+copyright: true
 ---
 > 之前有写过一篇 [WINNAS](../../2023-03/windows-server-2022-nas-init)，这个虽然有图形化，但是有个很严重的问题，windows 下的 docker 损耗太大，win server 下各种 amd 驱动不兼容，而且各种监控不好安装，并且不知道为啥，128G 内存分给 docker 只有 64G，就这还影响 OS 系统干其他事情，遂有以下配置
 
@@ -44,21 +45,21 @@ categories:  timeline
 # 软件配置
 ## NFS 服务器
 ### [NFS Server](https://zhuanlan.zhihu.com/p/75099437)
-> win server自带有nfs，配置简单，当然需要先raid5/6出去使用
+> win server 自带有 nfs，配置简单，当然需要先 raid5/6 出去使用
 ### [QBittorrent](https://www.qbittorrent.org/download)
-> bt下载工具，连不上节点先去下一个ubuntu的种子打通
+> bt 下载工具，连不上节点先去下一个 ubuntu 的种子打通
 > https://cn.ubuntu.com/download/alternative-download
 ### [百度网盘](https://pan.baidu.com/)
 ### [阿里云盘](https://www.aliyundrive.com/)
-### [115网盘](https://115.com/)
-> Appstore冷备份
+### [115 网盘](https://115.com/)
+> Appstore 冷备份
 ### [坚果云](https://www.jianguoyun.com/)
 ### [微力同步](http://www.verysync.com/)
 ### [夜神模拟器](https://www.yeshen.com/)
 
 ## Docker 服务器
 ### [1Panel 面板](https://1panel.cn/docs/installation/online_installation/)
-> 1panel是开源的，使用的是GPL协议
+> 1panel 是开源的，使用的是 GPL 协议
 ### 初始化脚本
 
 ```bash
