--- a/source/_posts/2023-04-09 Docker 应用清单.md
+++ b/source/_posts/2023-04-09 Docker 应用清单.md
@@ -6,6 +6,7 @@ urlname: kubernetes-1-24-inside-install
 tags: 
  - Containerd
 categories: kubernetes/docker/podman
+copyright: true
 ---
 
 # [lsky](https://github.com/lsky-org/lsky-pro)
